--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Fredoka+One&family=Mulish&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="eat-healthy-main/images/food/123.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
